tests/baselines/reference/assignmentCompatWithConstructSignatures2.errors.txt
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures2.ts(23,1): error TS2741: Property 'f' is missing in type '() => number' but required in type 'T'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures2.ts(24,1): error TS2741: Property 'f' is missing in type '(x: number) => string' but required in type 'T'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures2.ts(25,1): error TS2741: Property 'f' is missing in type '() => number' but required in type '{ f: new (x: number) => void; }'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures2.ts(26,1): error TS2741: Property 'f' is missing in type '(x: number) => string' but required in type '{ f: new (x: number) => void; }'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures2.ts(34,1): error TS2322: Type 'S2' is not assignable to type 'T'.
  Types of property 'f' are incompatible.
    Type '(x: string) => void' is not assignable to type 'new (x: number) => void'.
      Type '(x: string) => void' provides no match for the signature 'new (x: number): void'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures2.ts(35,1): error TS2322: Type '{ f(x: string): void; }' is not assignable to type 'T'.
  Types of property 'f' are incompatible.
    Type '(x: string) => void' is not assignable to type 'new (x: number) => void'.
      Type '(x: string) => void' provides no match for the signature 'new (x: number): void'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures2.ts(36,1): error TS2741: Property 'f' is missing in type '(x: string) => number' but required in type 'T'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures2.ts(37,1): error TS2741: Property 'f' is missing in type '(x: string) => string' but required in type 'T'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures2.ts(38,1): error TS2322: Type 'S2' is not assignable to type '{ f: new (x: number) => void; }'.
  Types of property 'f' are incompatible.
    Type '(x: string) => void' is not assignable to type 'new (x: number) => void'.
      Type '(x: string) => void' provides no match for the signature 'new (x: number): void'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures2.ts(39,1): error TS2322: Type '{ f(x: string): void; }' is not assignable to type '{ f: new (x: number) => void; }'.
  Types of property 'f' are incompatible.
    Type '(x: string) => void' is not assignable to type 'new (x: number) => void'.
      Type '(x: string) => void' provides no match for the signature 'new (x: number): void'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures2.ts(40,1): error TS2741: Property 'f' is missing in type '(x: string) => number' but required in type '{ f: new (x: number) => void; }'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures2.ts(41,1): error TS2741: Property 'f' is missing in type '(x: string) => string' but required in type '{ f: new (x: number) => void; }'.


==== tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures2.ts (12 errors) ====
    // void returning call signatures can be assigned a non-void returning call signature that otherwise matches
    
    interface T {
        f: new (x: number) => void;
    }
    var t: T;
    var a: { f: new (x: number) => void };
    
    t = a;
    a = t;
    
    interface S {
        f: new (x: number) => string;
    }
    var s: S;
    var a2: { f: new (x: number) => string };
    t = s;
    t = a2;
    a = s;
    a = a2;
    
    // errors
    t = () => 1;
    ~
!!! error TS2741: Property 'f' is missing in type '() => number' but required in type 'T'.
!!! related TS2728 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures2.ts:4:5: 'f' is declared here.
    t = function (x: number) { return ''; }
    ~
!!! error TS2741: Property 'f' is missing in type '(x: number) => string' but required in type 'T'.
!!! related TS2728 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures2.ts:4:5: 'f' is declared here.
    a = () => 1;
    ~
!!! error TS2741: Property 'f' is missing in type '() => number' but required in type '{ f: new (x: number) => void; }'.
!!! related TS2728 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures2.ts:7:10: 'f' is declared here.
    a = function (x: number) { return ''; }
    ~
!!! error TS2741: Property 'f' is missing in type '(x: number) => string' but required in type '{ f: new (x: number) => void; }'.
!!! related TS2728 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures2.ts:7:10: 'f' is declared here.
    
    interface S2 {
        f(x: string): void;
    }
    var s2: S2;
    var a3: { f(x: string): void };
    // these are errors
    t = s2;
    ~
!!! error TS2322: Type 'S2' is not assignable to type 'T'.
!!! error TS2322:   Types of property 'f' are incompatible.
!!! error TS2322:     Type '(x: string) => void' is not assignable to type 'new (x: number) => void'.
!!! error TS2322:       Type '(x: string) => void' provides no match for the signature 'new (x: number): void'.
    t = a3;
    ~
!!! error TS2322: Type '{ f(x: string): void; }' is not assignable to type 'T'.
!!! error TS2322:   Types of property 'f' are incompatible.
!!! error TS2322:     Type '(x: string) => void' is not assignable to type 'new (x: number) => void'.
!!! error TS2322:       Type '(x: string) => void' provides no match for the signature 'new (x: number): void'.
    t = (x: string) => 1;
    ~
!!! error TS2741: Property 'f' is missing in type '(x: string) => number' but required in type 'T'.
!!! related TS2728 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures2.ts:4:5: 'f' is declared here.
    t = function (x: string) { return ''; }
    ~
!!! error TS2741: Property 'f' is missing in type '(x: string) => string' but required in type 'T'.
!!! related TS2728 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures2.ts:4:5: 'f' is declared here.
    a = s2;
    ~
!!! error TS2322: Type 'S2' is not assignable to type '{ f: new (x: number) => void; }'.
!!! error TS2322:   Types of property 'f' are incompatible.
!!! error TS2322:     Type '(x: string) => void' is not assignable to type 'new (x: number) => void'.
!!! error TS2322:       Type '(x: string) => void' provides no match for the signature 'new (x: number): void'.
    a = a3;
    ~
!!! error TS2322: Type '{ f(x: string): void; }' is not assignable to type '{ f: new (x: number) => void; }'.
!!! error TS2322:   Types of property 'f' are incompatible.
!!! error TS2322:     Type '(x: string) => void' is not assignable to type 'new (x: number) => void'.
!!! error TS2322:       Type '(x: string) => void' provides no match for the signature 'new (x: number): void'.
    a = (x: string) => 1;
    ~
!!! error TS2741: Property 'f' is missing in type '(x: string) => number' but required in type '{ f: new (x: number) => void; }'.
!!! related TS2728 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures2.ts:7:10: 'f' is declared here.
    a = function (x: string) { return ''; }
    ~
!!! error TS2741: Property 'f' is missing in type '(x: string) => string' but required in type '{ f: new (x: number) => void; }'.
!!! related TS2728 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures2.ts:7:10: 'f' is declared here.
    